--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,18 @@ spring.datasource.password=NBZ7HaPCbfpi9hgv
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://aws-0-us-east-2.pooler.supabase.com:6543/postgres?user=postgres.hubzlyyshzyfcukabszn&password=NBZ7HaPCbfpi9hgv
 
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.register-mbeans=true
+
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 spring.servlet.multipart.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
