--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,16 @@ spring.datasource.password=NBZ7HaPCbfpi9hgv
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://aws-0-us-east-2.pooler.supabase.com:6543/postgres?user=postgres.hubzlyyshzyfcukabszn&password=NBZ7HaPCbfpi9hgv
 
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=false
 
 spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.leak-detection-threshold=60000
-spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.register-mbeans=true
 
 logging.level.com.zaxxer.hikari=DEBUG
