--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,31 @@
-#password: NBZ7HaPCbfpi9hgv
-spring.application.name=BackendSoftware
-spring.security.user.name=user
-spring.security.user.password=password
-spring.datasource.username=postgres
-spring.datasource.password=NBZ7HaPCbfpi9hgv
+spring.application.name=${SPRING_APPLICATION_NAME}
+spring.security.user.name=${SPRING_USER_NAME}
+spring.security.user.password=${SPRING_USER_PASSWORD}
+
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_FULL_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://aws-0-us-east-2.pooler.supabase.com:6543/postgres?user=postgres.hubzlyyshzyfcukabszn&password=NBZ7HaPCbfpi9hgv
 
-spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
-spring.datasource.hikari.data-source-properties.useServerPrepStmts=false
+# Hikari properties
+spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE}
+spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE}
+spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT}
+spring.datasource.hikari.max-lifetime=${HIKARI_MAX_LIFETIME}
+spring.datasource.hikari.connection-timeout=${HIKARI_CONNECTION_TIMEOUT}
+spring.datasource.hikari.register-mbeans=${HIKARI_REGISTER_MBEANS}
+spring.datasource.hikari.data-source-properties.cachePrepStmts=${HIKARI_CACHE_PREP_STMTS}
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=${HIKARI_PREP_STMT_CACHE_SIZE}
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=${HIKARI_PREP_STMT_CACHE_SQL_LIMIT}
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=${HIKARI_USE_SERVER_PREP_STMTS}
 
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.register-mbeans=true
+# Logging
+logging.level.com.zaxxer.hikari=${LOG_LEVEL_HIKARI}
+logging.level.org.hibernate.SQL=${LOG_LEVEL_HIBERNATE}
 
-logging.level.com.zaxxer.hikari=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-spring.servlet.multipart.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# JPA
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
+
+# Multipart
+spring.servlet.multipart.enabled=${SPRING_MULTIPART_ENABLED}
