--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,38 @@
-spring.application.name=${SPRING_APPLICATION_NAME}
+spring.application.name=BackendSoftware
+
+# Seguridad
 spring.security.user.name=${SPRING_USER_NAME}
 spring.security.user.password=${SPRING_USER_PASSWORD}
 
+# Configuración de conexión a la base de datos
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_FULL_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hikari properties
-spring.datasource.hikari.maximum-pool-size=${HIKARI_MAX_POOL_SIZE}
-spring.datasource.hikari.minimum-idle=${HIKARI_MIN_IDLE}
-spring.datasource.hikari.idle-timeout=${HIKARI_IDLE_TIMEOUT}
-spring.datasource.hikari.max-lifetime=${HIKARI_MAX_LIFETIME}
-spring.datasource.hikari.connection-timeout=${HIKARI_CONNECTION_TIMEOUT}
-spring.datasource.hikari.register-mbeans=${HIKARI_REGISTER_MBEANS}
-spring.datasource.hikari.data-source-properties.cachePrepStmts=${HIKARI_CACHE_PREP_STMTS}
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=${HIKARI_PREP_STMT_CACHE_SIZE}
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=${HIKARI_PREP_STMT_CACHE_SQL_LIMIT}
-spring.datasource.hikari.data-source-properties.useServerPrepStmts=${HIKARI_USE_SERVER_PREP_STMTS}
 
-# Logging
-logging.level.com.zaxxer.hikari=${LOG_LEVEL_HIKARI}
-logging.level.org.hibernate.SQL=${LOG_LEVEL_HIBERNATE}
+# Habilitar DEBUG para el framework Spring y Spring Beans
+#logging.level.org.springframework=DEBUG
+#logging.level.org.springframework.beans.factory=DEBUG
+#logging.level.org.springframework.context.annotation=DEBUG
 
-# JPA
-spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
 
-# Multipart
-spring.servlet.multipart.enabled=${SPRING_MULTIPART_ENABLED}
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+
+#Temas de devtools
+spring.devtools.restart.enabled=false
+spring.devtools.restart.exclude=static/**,public/**,templates/**,META-INF/**,resources/**
+
+# Configuración del pool de conexiones HikariCP
+spring.datasource.hikari.maximum-pool-size=2000
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.validation-timeout=5000
+
+# Desactivar caché de consultas (opcional, según necesidades)
+spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=false
+spring.jpa.properties.hibernate.statement_cache.size=0
