--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=BackendSoftware
 
 # Seguridad
-spring.security.user.name=${SPRING_USER_NAME}
-spring.security.user.password=${SPRING_USER_PASSWORD}
+#spring.security.user.name=${SPRING_USER_NAME}
+#spring.security.user.password=${SPRING_USER_PASSWORD}
 
 # Configuración de conexión a la base de datos
 spring.datasource.username=${DB_USERNAME}
