arreglos generales + acciones de mejora

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.application.name=BackendSoftware
 
-# Seguridad
-#spring.security.user.name=${SPRING_USER_NAME}
-#spring.security.user.password=${SPRING_USER_PASSWORD}
 
 # Configuración de conexión a la base de datos
 spring.datasource.username=${DB_USERNAME}
@@ -10,12 +7,13 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=${DB_FULL_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
-# Habilitar DEBUG para el framework Spring y Spring Beans
-#logging.level.org.springframework=DEBUG
-#logging.level.org.springframework.beans.factory=DEBUG
-#logging.level.org.springframework.context.annotation=DEBUG
-
+#Mails
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
