--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,9 @@
 
         <!-- Tema de E-MAILS -->
         <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>jakarta.mail</artifactId>
-            <version>2.0.1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.4.4</version>
         </dependency>
 
         <!--  Spring  -->
