Acciones de mejora

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Supabase config para archivos
+supabase.url=https://<TU_PROJECTO>.supabase.co
+supabase.key=<TU_SERVICE_ROLE_KEY>  # Se obtiene en Project Settings > API > service_role
+supabase.storage.bucket=propuestas
+
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
 
