Sistema de evidencias de acciones de mejora y correccion de bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,14 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Supabase config para archivos
-supabase.url=https://<TU_PROJECTO>.supabase.co
-supabase.key=<TU_SERVICE_ROLE_KEY>  # Se obtiene en Project Settings > API > service_role
-supabase.storage.bucket=propuestas
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=200MB
+
+supabase.access-key=${PUBLIC_KEY}
+supabase.secret-key=${SECRET_KEY}
+supabase.url=${SUPABASE_URL}
+supabase.bucket-propuestas=propuestas-de-mejora
+supabase.bucket-evidencias=evidencias-de-mejora
 
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
