--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,17 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.4.4</version>
         </dependency>
-
+        <!--AWS :) porque claro, porque no?-->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.25.27</version> <!-- Usa la versión más reciente disponible -->
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>url-connection-client</artifactId>
+            <version>2.25.27</version> <!-- Usa la misma versión que S3 -->
+        </dependency>
         <!--  Spring  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -163,6 +173,7 @@
     </dependencies>
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
