FULLSTACK DEVELOPER FOR THE WIN

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Supabase config para archivos
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=200MB
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 supabase.access-key=${PUBLIC_KEY}
 supabase.secret-key=${SECRET_KEY}
 supabase.url=${SUPABASE_URL}
