--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <artifactId>url-connection-client</artifactId>
             <version>2.25.27</version> <!-- Usa la misma versión que S3 -->
         </dependency>
+
+        <!-- Agent DEVELOPMENT KIT-->
+        <dependency>
+            <groupId>com.google.adk</groupId>
+            <artifactId>google-adk</artifactId>
+            <version>0.1.0</version>
+        </dependency>
         <!--  Spring  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
