Acciones de mejora e informes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ supabase.secret-key=${SECRET_KEY}
 supabase.url=${SUPABASE_URL}
 supabase.bucket-propuestas=propuestas-de-mejora
 supabase.bucket-evidencias=evidencias-de-mejora
+supabase.bucket-informes=informes-pdf
 
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
